# phex

./: phex.code-workspace
appliance/api/: .flake8  README.md  pyproject.toml
appliance/api/source/phex/api/: server.py
appliance/api/source/phex/image/: model.py  router.py
appliance/api/source/phex/photo/: model.py  router.py
