[tool.poetry]
name = "phex-api"
version = "0.1.0"
description = ""
authors = ["Christian Dein"]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "phex", from = "source" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
black = "^23.9.0"

[tool.black]
line-length = 128

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
